# cupdi

./: .gitattributes  .gitignore  Debug.xml  Makefile  Makefile.am  README.md  Readme.txt  Release.xml  atmel_start_pins.h  autogen.sh  clean.sh  config.h  configure  configure.ac  cross_compile.sh  cupdi.c  cupdi.cpp  cupdi.h  cupdi.sln  cupdi.vcxproj  cupdi.vcxproj.filters  cupdiexe.cpp  cupdiexe.sln  cupdiexe.vcxproj  cupdiexe.vcxproj.filters  cupdilib.cpp  cupdilib.sln  cupdilib.vcxproj  cupdilib.vcxproj.filters  dllmain.c  dllmain.h  driver_init.c  driver_init.h  env.txt  gnueabi.txt  main.c  set_build_env.sh  stdafx.cpp  updi_test_V4.componentinfo.xml  updi_test_V4.cproj
.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
Config/: RTE_Components.h  hpl_sercom_config.h  peripheral_clk_config.h
Debug/: Makefile  atmel_start.d  driver_init.d  main.d  makedep.mk  updi_test.elf  updi_test.hex  updi_test.lss  updi_test.map  updi_test.srec  updi_test_V3.elf  updi_test_V3.hex  updi_test_V3.lss  updi_test_V3.map  updi_test_V3.srec  updi_test_V4.elf  updi_test_V4.hex  updi_test_V4.lss  updi_test_V4.map  updi_test_V4.srec
Debug/Device_Startup/: startup_saml21.d  system_saml21.d
Debug/cupdi/: cupdi.d
Debug/examples/: driver_examples.d
argparse/: Makefile  Makefile.am  argparse.c
crc/: Makefile  Makefile.am  crc.c  crc.h
cupdi/: cupdi.c  cupdi.h
cupdi/crc/: crc.c  crc.h
cupdi/device/: device.c  device.h
cupdi/hex_file/: hexfile.h  ihex.c  ihex.h
cupdi/ihex/: ihex.c  kk_ihex_write.h
cupdi/platform/: delay.c  delay.h  error.h  logging.c  logging.h  platform.h  serial.c  serial.h  swap.c  swap.h
device/: Makefile  Makefile.am  device.c  device.h
ext/: ext.c  ext.h
file/: Makefile  Makefile.am  fop.c  fop.h  getline.c  getline.h
ihex/: Makefile  Makefile.am  ihex.c  ihex.h  kk_ihex.h  kk_ihex_read.c  kk_ihex_read.h  kk_ihex_write.c  kk_ihex_write.h
infoblock/: Makefile.am  ib.h  ib_router.c  s1.c  s1.h  s2.c  s2.h
os/: platform.h
regex/: Makefile  Makefile.am  README.md  re.c  re.h
string/: Makefile  Makefile.am  getline.c  getline.h  join.c  join.h  split.c  split.h  strlcat.c  strlcat.h  strndup.c  strndup.h
updi/: Makefile  Makefile.am  application.c  application.h  constants.h  link.c  link.h  nvm.c  nvm.h  physical.c  physical.h
(+85 files in other folders)
