AUTOMAKE_OPTIONS = foreign
noinst_LIBRARIES = libupdi.a
libupdi_a_SOURCES = application.c link.c nvm.c physical.c
libupdi_a_LIBADD = ../os/linux/libos.a
#libupdi_a_LIBADD += ../os/linux/serial.o
#libupdi_a_LIBADD += ../os/linux/logging.o
#libupdi_a_LIBADD += ../os/linux/time.o
include_HEADERS = application.h constants.h link.h nvm.h physical.h
#cupdi_CFLAGS = -static

